fixing image spacing and grid container

--- a/_sass/documentation/layout.scss
+++ b/_sass/documentation/layout.scss
@@ -4,7 +4,11 @@
  .grid-container {
    padding: 0 15px;
    max-width: 994px;
-   width: 994px;
+
+   @include media(sm) {
+     max-width: 100%;
+     padding: 0;
+   }
  }
 
 .header {
@@ -25,11 +29,19 @@
 
 .grid-block .master {
   flex: 0 0 25%;
+
+  @include media(sm) {
+    width: 0;
+    display: none;
+  }
 }
 
 .grid-block .detail {
   flex: 1 0 auto;
   max-width: 75%;
+  @include media(sm) {
+    max-width: 100%;
+  }
 }
 
 .main {
@@ -123,8 +135,7 @@
 .nav li.active > a {
   border: 1px solid $purple-light;
   background-color: $purple-lightest;
-  color: $purple-light;
-  font-weight: bold;
+  color: $purple;
 }
 
 .nav > li.active > a  {
@@ -135,6 +146,7 @@
 .nav li a {
   box-sizing: border-box;
   font-size: 13px;
+  border: 1px solid transparent;
   line-height: 20px;
   padding: 5px 8px;
   border-radius: 4px;
